Fix Cupertino button cutoff

--- a/src/layouts/cupertino.scss
+++ b/src/layouts/cupertino.scss
@@ -97,6 +97,18 @@ body:is(.layout-cupertino, .layout-macos):not(.is-mobile) {
     background-color: var(--background-primary);
   }
 
+  // Editor panel
+  .mod-root {
+    .workspace-leaf {
+      contain: size !important;
+    }
+    .workspace-leaf,
+    .workspace-leaf-content,
+    .workspace-tab-container {
+      overflow: visible;
+    }
+  }
+
   // Side panels
   &.stacked-nav-off .mod-sidedock.mod-left-split .mod-top-left-space .workspace-tab-header-container-inner {
     margin-left: 0;
